--- a/scss/common/_share.scss
+++ b/scss/common/_share.scss
@@ -35,6 +35,7 @@
     margin-right: ($card-inner-spacer-x * -1);
 
     a {
+      @extend %btn-base;
       @extend %btn-flat;
       @extend %btn-footer;
     }
