--- a/scss/common/_form-d-editor.scss
+++ b/scss/common/_form-d-editor.scss
@@ -12,26 +12,7 @@
   padding: ($card-inner-spacer-y / 2) $card-inner-spacer-x;
 
   .btn {
-    @extend %btn-sm;
-
-    background-color: transparent;
-    background-image: none;
-    box-shadow: none;
-    margin: 0;
-    min-width: 0;
-    padding-right: ($btn-padding-x-sm / 2);
-    padding-left: ($btn-padding-x-sm / 2);
-
-    @include focus-hover {
-      background-color: color-chooser($btn-bg-hover-dark, $btn-bg-hover-light);
-      background-image: none;
-      color: color-chooser($btn-color-dark, $btn-color-light);
-    }
-
-    &:active {
-      background-color: color-chooser($btn-bg-active-dark, $btn-bg-active-light);
-      background-image: none;
-    }
+    @extend %btn-raised-reverse;
   }
 }
 
