--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -192,7 +192,7 @@ $btn-bg-hover-dark:        $dark-hover !default;
 $btn-bg-hover-light:       $light-hover !default;
 $btn-bg-overlay-dark:      $black-divider !default;
 $btn-bg-overlay-light:     $black-divider !default;
-$btn-border-radius:        2px !default;
+$btn-border-radius:        4px !default;
 $btn-box-shadow:           $shadow-2dp !default;
 $btn-box-shadow-active:    $shadow-8dp !default;
 $btn-color-dark:           unquote('$primary') !default;
@@ -200,13 +200,17 @@ $btn-color-light:          unquote('$primary') !default;
 $btn-color-disabled-dark:  rgba(0, 0, 0, .3) !default;
 $btn-color-disabled-light: rgba(0, 0, 0, .26) !default;
 $btn-height:               36px !default;
+$btn-height-lg:            40px !default;
 $btn-height-sm:            32px !default;
 $btn-font-size:            14px !default;
+$btn-font-size-lg:         15px !default;
 $btn-font-size-sm:         13px !default;
 $btn-font-weight:          500 !default;
 $btn-padding-x:            16px !default;
+$btn-padding-x-lg:         16px !default;
 $btn-padding-x-sm:         16px !default;
 $btn-padding-y:            (($btn-height - $btn-font-size) / 2) !default;
+$btn-padding-y-lg:         (($btn-height-lg - $btn-font-size-lg) / 2) !default;
 $btn-padding-y-sm:         (($btn-height-sm - $btn-font-size-sm) / 2) !default;
 
 
@@ -315,7 +319,7 @@ $header-padding-y:          8px !default;
 
 $menu-panel-bg-dark:            $dark-4 !default;
 $menu-panel-bg-light:           $light-4 !default;
-$menu-panel-border-radius:      2px !default;
+$menu-panel-border-radius:      4px !default;
 $menu-panel-box-shadow:         $shadow-24dp !default;
 $menu-panel-inner-spacer-x:     8px !default;
 $menu-panel-inner-spacer-y:     8px !default;
