--- a/scss/common/_notification.scss
+++ b/scss/common/_notification.scss
@@ -10,3 +10,10 @@
 .alert-bootstrap-mode {
   margin-bottom: $spacer-lg;
 }
+
+[id='modal-alert'] {
+  border-radius: 0;
+  box-shadow: none;
+  margin-bottom: 0;
+  padding: $modal-padding-y $modal-padding-x;
+}
